Updated the Swagger Documentation to include all routes and tested thoroughly so that all routes successfully return data, work properly by updating database.
